--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,29 @@
 [nginx-limit-req]
-enabled  = true
-filter   = nginx-limit-req
-port     = http,https
+enabled = true
+filter = nginx-limit-req
+port = http,https
 logpath = /var/log/nginx/error.log
-        /var/log/nginx/cp-main_access_log
-        /var/log/nginx/cp-main_error_log
-maxretry = 10
+          /var/log/nginx/access.log
+maxretry = 8
 bantime = 900
-findtime = 60
+findtime = 300
 
 [nginx-block-444]
 enabled = true
 filter = nginx-block-444
-port     = http,https
+port = http,https
 logpath = /var/log/nginx/access.log
           /var/log/nginx/error.log
-findtime = 60
+maxretry = 4
 bantime = 3600
-maxretry = 5s
+findtime = 300
+
+[webmin-protect]
+enabled = true
+port = http,https
+filter = webmin-protect
+logpath = /var/log/webmin/miniserv.log
+          /var/log/webmin/miniserv.error
+maxretry = 3
+bantime = 3600
+findtime = 600
